oss-knowledge-gitops/front/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oss-knowledge-front
  labels:
    app: oss-knowledge-front
    environment: base
