oss-knowledge-gitops/front/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oss-knowledge-front-service
  labels:
    app: oss-knowledge-front
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: oss-knowledge-front
